--- a/templates/offre_emploi/ajouterOffre.html.twig
+++ b/templates/offre_emploi/ajouterOffre.html.twig
@@ -1,6 +1,6 @@
 {% extends 'dashboard.html.twig' %}
 
-{% block title %}Ajouter une nouvelle offre{% endblock %}
+{% block title %} une nouvelle offre{% endblock %}
 
 
 {% block body %}
